--- a/Homework 1/Latex/中文报告文案.md
+++ b/Homework 1/Latex/中文报告文案.md
@@ -8,5 +8,4 @@
 表格（标注各项最高）
 
 - PCA：我保留了前两个主成分，将结果投影到这两个主成分张成的2D空间上，这样可以保留主要方差方向。实验的结果如图所示：（图片）可以看到数据被分散得很开，而且0,3,4,6,9这几个数字是被well seperated的。从结果上看，PCA的ARI为0.3614，NMI为0.5190，Silhouette为0.3993，除了silhouette以外皆是三个method里得分最高的。这说明PCA能够较好的分离数据，并且与真实标签保持了较高的一致性，silhouette约0.4虽然不是最高，但是依旧保持了不错的簇的质量，说明数据在2D空间依旧形成了较紧密且分离的簇，正如图中所示，0,3,4,6,9的簇质量很高。除了这些以外，我还绘制了pca的scree plot，以及前十个pc解释方差的大小，如图所示（图片）可以看到，两张图都展现了第三个pc的重要作用，其解释的方差仅比前两个低一点，但是却比第四个要明显高出许多，在scree plot上也能看出Per-PC的曲线在3处有一个明显的下落，虽然cumulative的曲线远没有在3处迎来拐点，但是容易推断出第三个PC的重要作用，这也解释了为何从绝对数值上说，表现最好的PCA的ARI也仅为0.3614，因为2D投影损失了关键信息。除此以外，我还绘制了pca的component，见下图（图片）。
-- NMF：我首先通过重构误差确定了最优的超参数，k=20，也就是将数据分解到20个基向量，然后用PCA将NMF的系数矩阵W压缩到了2D的嵌入空间，方便之后比照结果，最终结果如图所示。可以看到NMF并不能在2D空间内将数据有效的分离开，在所有的
-
+- NMF：我首先通过重构误差确定了最优的超参数，k=20，也就是将数据分解到20个基向量，然后用PCA将NMF的系数矩阵W压缩到了2D的嵌入空间，方便之后比照结果，最终结果如图所示。可以看到NMF并不能在2D空间内将数据有效的分离开，在所有的method里最低的ARI和NMI也印证了这一点，这说明了NMF的低维空间捕捉到的是局部特征而非全局特征，因此PCA的压缩可能会导致NMF的结果整体失真，从而失去解释能力。但是另一方面，NMF的silhouette却是所有method中最高的，甚至比PCA还要高一点，可以看到所有的样本几乎都被压在了正空间附近，仅有小部分在负数空间，且不超过-0.2，即便在经过pca压缩后仍保留这种结构，导致空间分布不如PCA和ICA那么对称，然而聚类的质量却要略好于pca，这可能意味着NMF提取到的某些特征更适合这个场景的聚类。然而正如之前我们的PCA也因为没有算上第三PC而导致解释力大减一样，或许NMF的情况也是类似的，在图中我们也能看到代表着4的数据点被压在了最左侧一条，说明第一个PC能准确地分离出4，而代表着9的天蓝色也和形似的0一起被压在了最下面一条，说明第二个PC能准确地将这两个与其余的分离开，或许再加入一个PC，将数据在三维空间中展示，就能更清楚地看到在右上角的一众混杂的数据点形成更明显的簇吧。同样地，我也画出了NMF的components，附在下图。这里我们也可以看到NMF与PCA在提取特征的不同之处，NMF可以相对更聚焦于某一区域，这就是它能形成更良好的簇的原因之一。
