--- a/Homework 1/Latex/中文报告文案.md
+++ b/Homework 1/Latex/中文报告文案.md
@@ -9,3 +9,5 @@
 
 - PCA：我保留了前两个主成分，将结果投影到这两个主成分张成的2D空间上，这样可以保留主要方差方向。实验的结果如图所示：（图片）可以看到数据被分散得很开，而且0,3,4,6,9这几个数字是被well seperated的。从结果上看，PCA的ARI为0.3614，NMI为0.5190，Silhouette为0.3993，除了silhouette以外皆是三个method里得分最高的。这说明PCA能够较好的分离数据，并且与真实标签保持了较高的一致性，silhouette约0.4虽然不是最高，但是依旧保持了不错的簇的质量，说明数据在2D空间依旧形成了较紧密且分离的簇，正如图中所示，0,3,4,6,9的簇质量很高。除了这些以外，我还绘制了pca的scree plot，以及前十个pc解释方差的大小，如图所示（图片）可以看到，两张图都展现了第三个pc的重要作用，其解释的方差仅比前两个低一点，但是却比第四个要明显高出许多，在scree plot上也能看出Per-PC的曲线在3处有一个明显的下落，虽然cumulative的曲线远没有在3处迎来拐点，但是容易推断出第三个PC的重要作用，这也解释了为何从绝对数值上说，表现最好的PCA的ARI也仅为0.3614，因为2D投影损失了关键信息。除此以外，我还绘制了pca的component，见下图（图片）。
 - NMF：我首先通过重构误差确定了最优的超参数，k=20，也就是将数据分解到20个基向量，然后用PCA将NMF的系数矩阵W压缩到了2D的嵌入空间，方便之后比照结果，最终结果如图所示。可以看到NMF并不能在2D空间内将数据有效的分离开，在所有的method里最低的ARI和NMI也印证了这一点，这说明了NMF的低维空间捕捉到的是局部特征而非全局特征，因此PCA的压缩可能会导致NMF的结果整体失真，从而失去解释能力。但是另一方面，NMF的silhouette却是所有method中最高的，甚至比PCA还要高一点，可以看到所有的样本几乎都被压在了正空间附近，仅有小部分在负数空间，且不超过-0.2，即便在经过pca压缩后仍保留这种结构，导致空间分布不如PCA和ICA那么对称，然而聚类的质量却要略好于pca，这可能意味着NMF提取到的某些特征更适合这个场景的聚类。然而正如之前我们的PCA也因为没有算上第三PC而导致解释力大减一样，或许NMF的情况也是类似的，在图中我们也能看到代表着4的数据点被压在了最左侧一条，说明第一个PC能准确地分离出4，而代表着9的天蓝色也和形似的0一起被压在了最下面一条，说明第二个PC能准确地将这两个与其余的分离开，或许再加入一个PC，将数据在三维空间中展示，就能更清楚地看到在右上角的一众混杂的数据点形成更明显的簇吧。同样地，我也画出了NMF的components，附在下图。这里我们也可以看到NMF与PCA在提取特征的不同之处，NMF可以相对更聚焦于某一区域，这就是它能形成更良好的簇的原因之一。
+- ICA：结合（图）和（表格）可以看出，ICA在我的实验中表现最为均衡，得出的一部分簇在分离程度和紧密程度上是在所有3个模型里表现最好的，比如4,6,0，但是其余的簇要相比PCA中的更加混杂，相比NMF中的更加紧密，从直观上来看，ICA只能将数据分成两簇，一簇是由4,6,0组成的，一簇是其他7个数字组成的。从数据上看，ICA在ARI和NMI的表现介于PCA和NMF之间，而silhouette却是所有三个中的最低，这也符合我直观上得出的结论。ICA可供调整的超参数也不多，我在这里选择component=2，也就是降到2D空间，并对数据进行标准化，以方便展示。考虑到ICA的核心原理是分离其中的独立性，其依赖的是成分之间的统计独立性，所以标准化是常规操作，确保数据符合ICA的假设，也是因此，可以看到ICA的数据分布形态与PCA和NMF完全不同，是类似于以原点为中心的球形分布，而手写数字显然不可能符合这个假设，这就导致了ICA在本次实验中表现欠佳。同样地，我也画出了ICA的component，与其他两个相比，ICA components 像是捕捉笔画的“对比度变化”，边缘特征明显。
+- 综合来看，显然是PCA在这三个中脱颖而出，其具备最好的ARI和MRI，以及十分逼近最好的silhouette，在2D空间能显著分离的簇最多，而且如果扩展维度，pca的表现还将更高。
