start working on prob2, add data

--- a/Homework 1/Latex/Homework1_cs4570.tex
+++ b/Homework 1/Latex/Homework1_cs4570.tex
@@ -79,7 +79,7 @@
 \section{Dimension Reduction on Digits Data.}
 %-------------------------------
 % Problem 1a
-% -------------------------------
+% ------------------------------
 \subsection{Apply linear dimension reduction techniques including PCA, NMF, and ICA.}
 In this experiment, I applied three linear dimension reduction methodsand compared their performance on the \texttt{scikit-learn} \textit{Digits} dataset ($n = 1797$, $p = 64$).  
 
@@ -230,6 +230,21 @@ In summary, among the three linear dimension reduction techniques, PCA stands ou
 It achieved the highest ARI (0.3614) and NMI (0.5190), and a Silhouette score (0.3993) close to the best. 
 Visually, PCA produced the clearest and most interpretable clusters in the 2D embedding, separating several digits (such as 0, 3, 4, 6, and 9) distinctly. 
 Given that PCA captures global variance directions, its performance would likely improve further in higher-dimensional embeddings, where additional components could better preserve discriminative variance. 
+
+
+
+
+
+% -------------------------------
+% Problem 2
+% -------------------------------
+\section{Open-Ended Data Analysis - Breast Cancer gene expression data.}
+
+
+
+
+
+
 
 \newpage
 \appendix
