work on problem2

--- a/Homework 2/Latex/Homework2_cs4570.tex
+++ b/Homework 2/Latex/Homework2_cs4570.tex
@@ -258,7 +258,7 @@ for discrete count data and offers comparable empirical performance.
 % Problem 2
 % -------------------------------
 \section{Open-Ended Cluster Analysis - Breast Cancer gene expression data.}
-
+\subsection{Apply clustering techniques to explore this data set.}
 
 
 
