start to work on 2b

--- a/Homework 2/Latex/Homework2_cs4570.tex
+++ b/Homework 2/Latex/Homework2_cs4570.tex
@@ -370,7 +370,10 @@ Although this underestimates the total number of subtypes, it accurately reflect
 Taken together, these clustering outcomes indicate that the BRCA expression data contain both discrete and continuous subtype structures—Basal-like being compact and distinct, 
 whereas Luminal~A/B lie on a continuum of transcriptional profiles—consistent with known biological heterogeneity among breast cancer subtypes.
 
-\subsection{}
+\subsection{Implement cluster validation techniques.}
+
+
+
 
 
 % -------------------------------
